# Traffic_Filter_Agent

./: .gitignore  CLAUDE.md  README.md  app.py  instruction.md  langgraph.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: AGENTS.md
.github/prompts/: traffic-task-plan.prompt.md
src/: __main__.py  agent.py  graph.py  mcp_client.py  model_provider.py  nodes.py  prompts.py  security.py  state.py  tools.py  tshark_tools.py
src/traffic_filter_agent/: __init__.py  __main__.py  state.py
