[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-filter-agent"
version = "0.1.0"
description = "LangGraph-based network traffic analysis agent"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[dependency-groups]
dev = ["pytest>=8.0"]
